[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treenotate"
version = "1.0.0"
description = "Annotate phylogenetic trees with tip metadata and optional APOBEC3 branch labels."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.85",
    "pandas>=2.3.1",
    "numpy>=2.4.6"
]

[project.scripts]
treenotate = "treenotate:main"

[tool.setuptools]
py-modules = ["treenotate"]
